--- a/assets/css/src/_index.scss
+++ b/assets/css/src/_index.scss
@@ -31,108 +31,108 @@
 article#last-project-1 {
     background-image:
     linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)70%),
-    url('./../../img/src/florian-olivo-4hbJ-eymZ1o-unsplash.jpg');
+    url('./../../img/dist/florian-olivo-4hbJ-eymZ1o-unsplash.jpg');
     background-size: cover;
     &:hover {
         background-image:
         linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)0%),
-        url('./../../img/src/florian-olivo-4hbJ-eymZ1o-unsplash.jpg');
+        url('./../../img/dist/florian-olivo-4hbJ-eymZ1o-unsplash.jpg');
         background-size: cover;
     }
 }
 article#last-project-2 {
     background-image:
     linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)70%),
-    url('./../../img/src/annie-spratt-QckxruozjRg-unsplash.jpg');
+    url('./../../img/dist/annie-spratt-QckxruozjRg-unsplash.jpg');
     background-size: cover;
     &:hover {
         background-image:
         linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)0%),
-        url('./../../img/src/annie-spratt-QckxruozjRg-unsplash.jpg');
+        url('./../../img/dist/annie-spratt-QckxruozjRg-unsplash.jpg');
         background-size: cover;
     }
 }
 article#last-project-3 {
     background-image:
     linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)70%),
-    url('./../../img/src/alvaro-reyes-qWwpHwip31M-unsplash.jpg');
+    url('./../../img/dist/alvaro-reyes-qWwpHwip31M-unsplash.jpg');
     background-size: cover;
     &:hover {
         background-image:
         linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)0%),
-        url('./../../img/src/alvaro-reyes-qWwpHwip31M-unsplash.jpg');
+        url('./../../img/dist/alvaro-reyes-qWwpHwip31M-unsplash.jpg');
         background-size: cover;
     }
 }
 article#last-project-4 {
     background-image:
     linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)70%),
-    url('./../../img/src/halgatewood-com-tZc3vjPCk-Q-unsplash.jpg');
+    url('./../../img/dist/halgatewood-com-tZc3vjPCk-Q-unsplash.jpg');
     background-size: cover;
     &:hover {
         background-image:
         linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)0%),
-        url('./../../img/src/halgatewood-com-tZc3vjPCk-Q-unsplash.jpg');
+        url('./../../img/dist/halgatewood-com-tZc3vjPCk-Q-unsplash.jpg');
         background-size: cover;
     }
 }
 article#last-project-5 {
     background-image:
     linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)70%),
-    url('./../../img/src/stephen-phillips-hostreviews-co-uk-aE0iX-bLCJc-unsplash.jpg');
+    url('./../../img/dist/stephen-phillips-hostreviews-co-uk-aE0iX-bLCJc-unsplash.jpg');
     background-size: cover;
     &:hover {
         background-image:
         linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)0%),
-        url('./../../img/src/stephen-phillips-hostreviews-co-uk-aE0iX-bLCJc-unsplash.jpg');
+        url('./../../img/dist/stephen-phillips-hostreviews-co-uk-aE0iX-bLCJc-unsplash.jpg');
         background-size: cover;
     }
 }
 article#last-project-6 {
     background-image:
     linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)70%),
-    url('./../../img/src/visual-design-pl9DrjAMV6I-unsplash.jpg');
+    url('./../../img/dist/visual-design-pl9DrjAMV6I-unsplash.jpg');
     background-size: cover;
     &:hover {
         background-image:
         linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)0%),
-        url('./../../img/src/visual-design-pl9DrjAMV6I-unsplash.jpg');
+        url('./../../img/dist/visual-design-pl9DrjAMV6I-unsplash.jpg');
         background-size: cover;
     }
 }
 article#design {
     background-image:
     linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)70%),
-    url('./../../img/src/design.jpg');
+    url('./../../img/dist/design.jpg');
     background-size: cover;
     &:hover {
         background-image:
         linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)0%),
-        url('./../../img/src/design.jpg');
+        url('./../../img/dist/design.jpg');
         background-size: cover;
     }
 }
 article#cpw {
     background-image:
     linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)70%),
-    url('./../../img/src/cpw.jpg');
+    url('./../../img/dist/cpw.jpg');
     background-size: cover;
     &:hover {
         background-image:
         linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)0%),
-        url('./../../img/src/cpw.jpg');
+        url('./../../img/dist/cpw.jpg');
         background-size: cover;
     }
 }
 article#graph {
     background-image:
     linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)70%),
-    url('./../../img/src/graph.jpg');
+    url('./../../img/dist/graph.jpg');
     background-size: cover;
     &:hover {
         background-image:
         linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)0%),
-        url('./../../img/src/graph.jpg');
+        url('./../../img/dist/graph.jpg');
         background-size: cover;
     }
 }
