--- a/assets/css/src/_project.scss
+++ b/assets/css/src/_project.scss
@@ -254,7 +254,7 @@
         border-radius: 40px !important;
         width:  100% !important;
         height: 200px !important;
-        background: center url(./../../img/src/dev.jpg) no-repeat;
+        background: center url(./../../img/dist/dev.jpg) no-repeat;
         background-size: cover;
         filter: opacity(0.8);
         -webkit-filter: opacity(0.8);
@@ -376,7 +376,7 @@
       border-radius: 40px !important;
       width:  100% !important;
       height: 200px !important;
-      background: center url(./../../img/src/dev.jpg) no-repeat;
+      background: center url(./../../img/dist/dev.jpg) no-repeat;
       background-size: cover;
       filter: opacity(0.8);
       -webkit-filter: opacity(0.8);
@@ -497,7 +497,7 @@
       border-radius: 40px !important;
       width:  100% !important;
       height: 200px !important;
-      background: center url(./../../img/src/dev.jpg) no-repeat;
+      background: center url(./../../img/dist/dev.jpg) no-repeat;
       background-size: cover;
       filter: opacity(0.8);
       -webkit-filter: opacity(0.8);
