--- a/assets/css/src/_index.scss
+++ b/assets/css/src/_index.scss
@@ -7,21 +7,14 @@
     -webkit-border-radius: 24px 150px 24px 150px;
     -moz-border-radius: 24px 150px 24px 150px;
     width: 100%;
-    height: 100%;
-    padding: 0 10px;
-    img {
-      border-radius: 24px 150px 24px 150px;
-      -webkit-border-radius: 24px 150px 24px 150px;
-      -moz-border-radius: 24px 150px 24px 150px;
-      width: 100%;
-      height: auto;
-      max-width: 1400px;
-      filter: sepia(50%) brightness(80%) hue-rotate(319deg) saturate(150%)
-        contrast(100%);
-      -webkit-filter: sepia(50%) brightness(80%) hue-rotate(319deg)
-        saturate(150%) contrast(100%);
-      -moz-filter: sepia(50%) brightness(80%) hue-rotate(319deg) saturate(150%)
-        contrast(100%);
+    height: auto;
+    max-width: 1400px;
+    filter: sepia(50%) brightness(80%) hue-rotate(319deg) saturate(150%)
+      contrast(100%);
+    -webkit-filter: sepia(50%) brightness(80%) hue-rotate(319deg)
+      saturate(150%) contrast(100%);
+    -moz-filter: sepia(50%) brightness(80%) hue-rotate(319deg) saturate(150%)
+      contrast(100%);
     }
     li.splide__slide {
       position: relative;
@@ -36,7 +29,6 @@
         z-index: 2;
       }
     }
-  }
 }
 article#last-project-1 {
   background-image: linear-gradient(
@@ -245,6 +237,13 @@ article#graph {
   }
 }
 @media screen and (min-width: 768px) {
+  #splide-index {
+      li.splide__slide {
+        h2 {
+          font-size: 2em;
+        }
+      }
+  }
   .portfolio article#dev {
     grid-column: span 6;
   }
