--- a/assets/css/src/_all-pages.scss
+++ b/assets/css/src/_all-pages.scss
@@ -19,7 +19,7 @@
       rgba(240, 174, 84, 0.3),
       rgba(240, 174, 84, 0.3)
     ),
-    url("./../../img/src/bg-header.jpg");
+    url("./../../img/dist/bg-header.jpg");
   border: 10px solid $bg;
   background-size: cover;
   width: 100%;
@@ -51,7 +51,7 @@
       rgba(255, 255, 255, 0.6),
       rgba(0, 0, 0, 0.7) 70%
     ),
-    url("./../../img/src/dev.jpg");
+    url("./../../img/dist/dev.jpg");
   background-size: cover;
   border-radius: 40px;
   display: flex;
@@ -62,7 +62,7 @@
         rgba(255, 255, 255, 0.6),
         rgba(0, 0, 0, 0.7) 0%
       ),
-      url("./../../img/src/dev.jpg");
+      url("./../../img/dist/dev.jpg");
     background-size: cover;
     border-radius: 40px;
     display: flex;
