--- a/assets/css/src/_index.scss
+++ b/assets/css/src/_index.scss
@@ -36,7 +36,7 @@ article#last-project-1 {
       rgba(255, 255, 255, 0.6),
       rgba(0, 0, 0, 0.7) 70%
     ),
-    url("./../../img/src/florian-olivo-4hbJ-eymZ1o-unsplash.jpg");
+    url("./../../img/dist/florian-olivo-4hbJ-eymZ1o-unsplash.jpg");
   background-size: cover;
   &:hover {
     background-image: linear-gradient(
@@ -44,7 +44,7 @@ article#last-project-1 {
         rgba(255, 255, 255, 0.6),
         rgba(0, 0, 0, 0.7) 0%
       ),
-      url("./../../img/src/florian-olivo-4hbJ-eymZ1o-unsplash.jpg");
+      url("./../../img/dist/florian-olivo-4hbJ-eymZ1o-unsplash.jpg");
     background-size: cover;
   }
 }
@@ -54,7 +54,7 @@ article#last-project-2 {
       rgba(255, 255, 255, 0.6),
       rgba(0, 0, 0, 0.7) 70%
     ),
-    url("./../../img/src/annie-spratt-QckxruozjRg-unsplash.jpg");
+    url("./../../img/dist/annie-spratt-QckxruozjRg-unsplash.jpg");
   background-size: cover;
   &:hover {
     background-image: linear-gradient(
@@ -62,7 +62,7 @@ article#last-project-2 {
         rgba(255, 255, 255, 0.6),
         rgba(0, 0, 0, 0.7) 0%
       ),
-      url("./../../img/src/annie-spratt-QckxruozjRg-unsplash.jpg");
+      url("./../../img/dist/annie-spratt-QckxruozjRg-unsplash.jpg");
     background-size: cover;
   }
 }
@@ -72,7 +72,7 @@ article#last-project-3 {
       rgba(255, 255, 255, 0.6),
       rgba(0, 0, 0, 0.7) 70%
     ),
-    url("./../../img/src/alvaro-reyes-qWwpHwip31M-unsplash.jpg");
+    url("./../../img/dist/alvaro-reyes-qWwpHwip31M-unsplash.jpg");
   background-size: cover;
   &:hover {
     background-image: linear-gradient(
@@ -80,7 +80,7 @@ article#last-project-3 {
         rgba(255, 255, 255, 0.6),
         rgba(0, 0, 0, 0.7) 0%
       ),
-      url("./../../img/src/alvaro-reyes-qWwpHwip31M-unsplash.jpg");
+      url("./../../img/dist/alvaro-reyes-qWwpHwip31M-unsplash.jpg");
     background-size: cover;
   }
 }
@@ -90,7 +90,7 @@ article#last-project-4 {
       rgba(255, 255, 255, 0.6),
       rgba(0, 0, 0, 0.7) 70%
     ),
-    url("./../../img/src/halgatewood-com-tZc3vjPCk-Q-unsplash.jpg");
+    url("./../../img/dist/halgatewood-com-tZc3vjPCk-Q-unsplash.jpg");
   background-size: cover;
   &:hover {
     background-image: linear-gradient(
@@ -98,7 +98,7 @@ article#last-project-4 {
         rgba(255, 255, 255, 0.6),
         rgba(0, 0, 0, 0.7) 0%
       ),
-      url("./../../img/src/halgatewood-com-tZc3vjPCk-Q-unsplash.jpg");
+      url("./../../img/dist/halgatewood-com-tZc3vjPCk-Q-unsplash.jpg");
     background-size: cover;
   }
 }
@@ -108,7 +108,7 @@ article#last-project-5 {
       rgba(255, 255, 255, 0.6),
       rgba(0, 0, 0, 0.7) 70%
     ),
-    url("./../../img/src/stephen-phillips-hostreviews-co-uk-aE0iX-bLCJc-unsplash.jpg");
+    url("./../../img/dist/stephen-phillips-hostreviews-co-uk-aE0iX-bLCJc-unsplash.jpg");
   background-size: cover;
   &:hover {
     background-image: linear-gradient(
@@ -116,7 +116,7 @@ article#last-project-5 {
         rgba(255, 255, 255, 0.6),
         rgba(0, 0, 0, 0.7) 0%
       ),
-      url("./../../img/src/stephen-phillips-hostreviews-co-uk-aE0iX-bLCJc-unsplash.jpg");
+      url("./../../img/dist/stephen-phillips-hostreviews-co-uk-aE0iX-bLCJc-unsplash.jpg");
     background-size: cover;
   }
 }
@@ -126,7 +126,7 @@ article#last-project-6 {
       rgba(255, 255, 255, 0.6),
       rgba(0, 0, 0, 0.7) 70%
     ),
-    url("./../../img/src/visual-design-pl9DrjAMV6I-unsplash.jpg");
+    url("./../../img/dist/visual-design-pl9DrjAMV6I-unsplash.jpg");
   background-size: cover;
   &:hover {
     background-image: linear-gradient(
@@ -134,7 +134,7 @@ article#last-project-6 {
         rgba(255, 255, 255, 0.6),
         rgba(0, 0, 0, 0.7) 0%
       ),
-      url("./../../img/src/visual-design-pl9DrjAMV6I-unsplash.jpg");
+      url("./../../img/dist/visual-design-pl9DrjAMV6I-unsplash.jpg");
     background-size: cover;
   }
 }
@@ -144,7 +144,7 @@ article#design {
       rgba(255, 255, 255, 0.6),
       rgba(0, 0, 0, 0.7) 70%
     ),
-    url("./../../img/src/design.jpg");
+    url("./../../img/dist/design.jpg");
   background-size: cover;
   &:hover {
     background-image: linear-gradient(
@@ -152,7 +152,7 @@ article#design {
         rgba(255, 255, 255, 0.6),
         rgba(0, 0, 0, 0.7) 0%
       ),
-      url("./../../img/src/design.jpg");
+      url("./../../img/dist/design.jpg");
     background-size: cover;
   }
 }
@@ -162,7 +162,7 @@ article#cpw {
       rgba(255, 255, 255, 0.6),
       rgba(0, 0, 0, 0.7) 70%
     ),
-    url("./../../img/src/cpw.jpg");
+    url("./../../img/dist/cpw.jpg");
   background-size: cover;
   &:hover {
     background-image: linear-gradient(
@@ -170,7 +170,7 @@ article#cpw {
         rgba(255, 255, 255, 0.6),
         rgba(0, 0, 0, 0.7) 0%
       ),
-      url("./../../img/src/cpw.jpg");
+      url("./../../img/dist/cpw.jpg");
     background-size: cover;
   }
 }
@@ -180,7 +180,7 @@ article#graph {
       rgba(255, 255, 255, 0.6),
       rgba(0, 0, 0, 0.7) 70%
     ),
-    url("./../../img/src/graph.jpg");
+    url("./../../img/dist/graph.jpg");
   background-size: cover;
   &:hover {
     background-image: linear-gradient(
@@ -188,7 +188,7 @@ article#graph {
         rgba(255, 255, 255, 0.6),
         rgba(0, 0, 0, 0.7) 0%
       ),
-      url("./../../img/src/graph.jpg");
+      url("./../../img/dist/graph.jpg");
     background-size: cover;
   }
 }
@@ -218,7 +218,6 @@ article#graph {
   width: 100%;
   display: flex;
   justify-content: flex-start;
-  margin-left: 50px;
 }
 
 /*==============RESPONSIVE=============*/
