--- a/assets/css/src/_project.scss
+++ b/assets/css/src/_project.scss
@@ -8,6 +8,7 @@
             width: 100%;
             height: 300px;
             margin-bottom: 10px;
+            box-shadow: $grey 10px 10px 10px;
         }
         h2 {
             position: absolute;
@@ -35,6 +36,8 @@
     height: 246px;
     display: block;
     margin: auto;
+    border: 1px solid $blue-fonce;
+    box-shadow: $grey 10px 10px 10px;
 }
 
 .author-description {
@@ -179,7 +182,6 @@
             border-radius: 40px;
             width: 200px;
             height: 300px;
-            padding: 20px;
         }
 
         h2 {
