--- a/assets/css/src/_page404.scss
+++ b/assets/css/src/_page404.scss
@@ -4,7 +4,7 @@
   overflow: hidden;
 
   background: center no-repeat
-    url(../../img/dist/florian-olivo-4hbJ-eymZ1o-unsplash.jpg);
+    url(../../img/dist/florian-olivo-4hbJ-eymZ1o-unsplash.png);
   background-size: cover;
   text-align: center;
   padding: 40px;
@@ -76,7 +76,7 @@
     overflow: hidden;
 
     background: center no-repeat
-      url(../../img/dist/florian-olivo-4hbJ-eymZ1o-unsplash.jpg);
+      url(../../img/dist/florian-olivo-4hbJ-eymZ1o-unsplash.png);
     background-size: cover;
     text-align: center;
     padding: 40px;
@@ -148,7 +148,7 @@
     overflow: hidden;
 
     background: center no-repeat
-      url(../../img/dist/florian-olivo-4hbJ-eymZ1o-unsplash.jpg);
+      url(../../img/dist/florian-olivo-4hbJ-eymZ1o-unsplash.png);
     background-size: cover;
     text-align: center;
     padding: 40px;
