--- a/assets/css/src/_project.scss
+++ b/assets/css/src/_project.scss
@@ -252,7 +252,7 @@
             border-radius: 40px !important;
             width: 100% !important;
             height: 200px !important;
-            background: center url(./../../img/dist/dev.jpg) no-repeat;
+            background: center url(./../../img/dist/dev.png) no-repeat;
             background-size: cover;
             filter: opacity(0.8);
             -webkit-filter: opacity(0.8);
@@ -372,7 +372,7 @@
             border-radius: 40px !important;
             width: 100% !important;
             height: 200px !important;
-            background: center url(./../../img/dist/dev.jpg) no-repeat;
+            background: center url(./../../img/dist/dev.png) no-repeat;
             background-size: cover;
             filter: opacity(0.8);
             -webkit-filter: opacity(0.8);
@@ -493,7 +493,7 @@
             border-radius: 40px !important;
             width: 100% !important;
             height: 200px !important;
-            background: center url(./../../img/dist/dev.jpg) no-repeat;
+            background: center url(./../../img/dist/dev.png) no-repeat;
             background-size: cover;
             filter: opacity(0.8);
             -webkit-filter: opacity(0.8);
