--- a/assets/css/src/_userport.scss
+++ b/assets/css/src/_userport.scss
@@ -63,7 +63,7 @@
       ),
       url("./../../img/dist/safar-safarov-LKsHwgzyk7c-unsplash.jpg");
     background-size: cover;
-    background-position: center;
+    background-position: center;jpg
   }
 }
 #project-sam-2 {
@@ -72,7 +72,7 @@
       rgba(255, 255, 255, 0.6),
       rgba(0, 0, 0, 0.7) 70%
     ),
-    url("./../../img/dist/roman-synkevych-vXInUOv1n84-unsplash.jpg");
+    url("./../../img/dist/roman-synkevych-vXInUOv1n84-unsplash.png");
   background-size: cover;
   background-position: center;
   &:hover {
@@ -81,7 +81,7 @@
         rgba(255, 255, 255, 0.6),
         rgba(0, 0, 0, 0.7) 0%
       ),
-      url("./../../img/dist/roman-synkevych-vXInUOv1n84-unsplash.jpg");
+      url("./../../img/dist/roman-synkevych-vXInUOv1n84-unsplash.png");
     background-size: cover;
     background-position: center;
   }
@@ -92,7 +92,7 @@
       rgba(255, 255, 255, 0.6),
       rgba(0, 0, 0, 0.7) 70%
     ),
-    url("./../../img/dist/zan-BTzLUhq4z0U-unsplash.jpg");
+    url("./../../img/dist/zan-BTzLUhq4z0U-unsplash.png");
   background-size: cover;
   background-position: center;
   &:hover {
@@ -101,7 +101,7 @@
         rgba(255, 255, 255, 0.6),
         rgba(0, 0, 0, 0.7) 0%
       ),
-      url("./../../img/dist/zan-BTzLUhq4z0U-unsplash.jpg");
+      url("./../../img/dist/zan-BTzLUhq4z0U-unsplash.png");
     background-size: cover;
     background-position: center;
   }
@@ -112,7 +112,7 @@
       rgba(255, 255, 255, 0.6),
       rgba(0, 0, 0, 0.7) 70%
     ),
-    url("./../../img/dist/campaign-creators-8F4EX4Nw1yY-unsplash.jpg");
+    url("./../../img/dist/campaign-creators-8F4EX4Nw1yY-unsplash.png");
   background-size: cover;
   background-position: center;
   &:hover {
@@ -121,7 +121,7 @@
         rgba(255, 255, 255, 0.6),
         rgba(0, 0, 0, 0.7) 0%
       ),
-      url("./../../img/dist/campaign-creators-8F4EX4Nw1yY-unsplash.jpg");
+      url("./../../img/dist/campaign-creators-8F4EX4Nw1yY-unsplash.png");
     background-size: cover;
     background-position: center;
   }
@@ -152,7 +152,7 @@
       rgba(255, 255, 255, 0.6),
       rgba(0, 0, 0, 0.7) 70%
     ),
-    url("./../../img/dist/annie-spratt-QckxruozjRg-unsplash.jpg");
+    url("./../../img/dist/annie-spratt-QckxruozjRg-unsplash.png");
   background-size: cover;
   background-position: center;
   &:hover {
@@ -161,7 +161,7 @@
         rgba(255, 255, 255, 0.6),
         rgba(0, 0, 0, 0.7) 0%
       ),
-      url("./../../img/dist/annie-spratt-QckxruozjRg-unsplash.jpg");
+      url("./../../img/dist/annie-spratt-QckxruozjRg-unsplash.png");
     background-size: cover;
     background-position: center;
   }
