--- a/assets/css/src/_index.scss
+++ b/assets/css/src/_index.scss
@@ -36,7 +36,7 @@ article#last-project-1 {
       rgba(255, 255, 255, 0.6),
       rgba(0, 0, 0, 0.7) 70%
     ),
-    url("./../../img/dist/florian-olivo-4hbJ-eymZ1o-unsplash.jpg");
+    url("./../../img/dist/florian-olivo-4hbJ-eymZ1o-unsplash.png");
   background-size: cover;
   &:hover {
     background-image: linear-gradient(
@@ -44,7 +44,7 @@ article#last-project-1 {
         rgba(255, 255, 255, 0.6),
         rgba(0, 0, 0, 0.7) 0%
       ),
-      url("./../../img/dist/florian-olivo-4hbJ-eymZ1o-unsplash.jpg");
+      url("./../../img/dist/florian-olivo-4hbJ-eymZ1o-unsplash.png");
     background-size: cover;
   }
 }
@@ -54,7 +54,7 @@ article#last-project-2 {
       rgba(255, 255, 255, 0.6),
       rgba(0, 0, 0, 0.7) 70%
     ),
-    url("./../../img/dist/annie-spratt-QckxruozjRg-unsplash.jpg");
+    url("./../../img/dist/annie-spratt-QckxruozjRg-unsplash.png");
   background-size: cover;
   &:hover {
     background-image: linear-gradient(
@@ -62,7 +62,7 @@ article#last-project-2 {
         rgba(255, 255, 255, 0.6),
         rgba(0, 0, 0, 0.7) 0%
       ),
-      url("./../../img/dist/annie-spratt-QckxruozjRg-unsplash.jpg");
+      url("./../../img/dist/annie-spratt-QckxruozjRg-unsplash.png");
     background-size: cover;
   }
 }
@@ -72,7 +72,7 @@ article#last-project-3 {
       rgba(255, 255, 255, 0.6),
       rgba(0, 0, 0, 0.7) 70%
     ),
-    url("./../../img/dist/alvaro-reyes-qWwpHwip31M-unsplash.jpg");
+    url("./../../img/dist/alvaro-reyes-qWwpHwip31M-unsplash.png");
   background-size: cover;
   &:hover {
     background-image: linear-gradient(
@@ -80,7 +80,7 @@ article#last-project-3 {
         rgba(255, 255, 255, 0.6),
         rgba(0, 0, 0, 0.7) 0%
       ),
-      url("./../../img/dist/alvaro-reyes-qWwpHwip31M-unsplash.jpg");
+      url("./../../img/dist/alvaro-reyes-qWwpHwip31M-unsplash.png");
     background-size: cover;
   }
 }
@@ -90,7 +90,7 @@ article#last-project-4 {
       rgba(255, 255, 255, 0.6),
       rgba(0, 0, 0, 0.7) 70%
     ),
-    url("./../../img/dist/halgatewood-com-tZc3vjPCk-Q-unsplash.jpg");
+    url("./../../img/dist/halgatewood-com-tZc3vjPCk-Q-unsplash.png");
   background-size: cover;
   &:hover {
     background-image: linear-gradient(
@@ -98,7 +98,7 @@ article#last-project-4 {
         rgba(255, 255, 255, 0.6),
         rgba(0, 0, 0, 0.7) 0%
       ),
-      url("./../../img/dist/halgatewood-com-tZc3vjPCk-Q-unsplash.jpg");
+      url("./../../img/dist/halgatewood-com-tZc3vjPCk-Q-unsplash.png");
     background-size: cover;
   }
 }
@@ -126,7 +126,7 @@ article#last-project-6 {
       rgba(255, 255, 255, 0.6),
       rgba(0, 0, 0, 0.7) 70%
     ),
-    url("./../../img/dist/visual-design-pl9DrjAMV6I-unsplash.jpg");
+    url("./../../img/dist/visual-design-pl9DrjAMV6I-unsplash.png");
   background-size: cover;
   &:hover {
     background-image: linear-gradient(
@@ -134,7 +134,7 @@ article#last-project-6 {
         rgba(255, 255, 255, 0.6),
         rgba(0, 0, 0, 0.7) 0%
       ),
-      url("./../../img/dist/visual-design-pl9DrjAMV6I-unsplash.jpg");
+      url("./../../img/dist/visual-design-pl9DrjAMV6I-unsplash.png");
     background-size: cover;
   }
 }
@@ -144,7 +144,7 @@ article#design {
       rgba(255, 255, 255, 0.6),
       rgba(0, 0, 0, 0.7) 70%
     ),
-    url("./../../img/dist/design.jpg");
+    url("./../../img/dist/design.png");
   background-size: cover;
   &:hover {
     background-image: linear-gradient(
@@ -152,7 +152,7 @@ article#design {
         rgba(255, 255, 255, 0.6),
         rgba(0, 0, 0, 0.7) 0%
       ),
-      url("./../../img/dist/design.jpg");
+      url("./../../img/dist/design.png");
     background-size: cover;
   }
 }
@@ -162,15 +162,16 @@ article#cpw {
       rgba(255, 255, 255, 0.6),
       rgba(0, 0, 0, 0.7) 70%
     ),
-    url("./../../img/dist/cpw.jpg");
+    url("./../../img/dist/cpw.png");
   background-size: cover;
+  max-width: 204px;
   &:hover {
     background-image: linear-gradient(
         to bottom,
         rgba(255, 255, 255, 0.6),
         rgba(0, 0, 0, 0.7) 0%
       ),
-      url("./../../img/dist/cpw.jpg");
+      url("./../../img/dist/cpw.png");
     background-size: cover;
   }
 }
@@ -180,7 +181,7 @@ article#graph {
       rgba(255, 255, 255, 0.6),
       rgba(0, 0, 0, 0.7) 70%
     ),
-    url("./../../img/dist/graph.jpg");
+    url("./../../img/dist/graph.png");
   background-size: cover;
   &:hover {
     background-image: linear-gradient(
@@ -188,7 +189,7 @@ article#graph {
         rgba(255, 255, 255, 0.6),
         rgba(0, 0, 0, 0.7) 0%
       ),
-      url("./../../img/dist/graph.jpg");
+      url("./../../img/dist/graph.png");
     background-size: cover;
   }
 }
@@ -290,5 +291,8 @@ article#graph {
       height: auto;
       max-height: 400px;
     }
+  }
+  article#cpw {
+    max-width: 1000px;
   }
 }
