--- a/assets/css/src/_portfolio-section.scss
+++ b/assets/css/src/_portfolio-section.scss
@@ -1,84 +1,84 @@
 article#project-dev-1 {
     background-image:
     linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)70%),
-    url('./../../img/dist/florian-olivo-4hbJ-eymZ1o-unsplash.jpg');
+    url('./../../img/dist/florian-olivo-4hbJ-eymZ1o-unsplash.png');
     background-size: cover;
     &:hover {
         background-image:
         linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)0%),
-        url('./../../img/dist/florian-olivo-4hbJ-eymZ1o-unsplash.jpg');
+        url('./../../img/dist/florian-olivo-4hbJ-eymZ1o-unsplash.png');
         background-size: cover;
     }
 }
 article#project-dev-2 {
     background-image:
     linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)70%),
-    url('./../../img/dist/alvaro-reyes-qWwpHwip31M-unsplash.jpg');
+    url('./../../img/dist/alvaro-reyes-qWwpHwip31M-unsplash.png');
     background-size: cover;
     &:hover {
         background-image:
         linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)0%),
-        url('./../../img/dist/alvaro-reyes-qWwpHwip31M-unsplash.jpg');
+        url('./../../img/dist/alvaro-reyes-qWwpHwip31M-unsplash.png');
         background-size: cover;
     }
 }
 article#project-dev-3 {
     background-image:
     linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)70%),
-    url('./../../img/dist/annie-spratt-QckxruozjRg-unsplash.jpg');
+    url('./../../img/dist/annie-spratt-QckxruozjRg-unsplash.png');
     background-size: cover;
     &:hover {
         background-image:
         linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)0%),
-        url('./../../img/dist/annie-spratt-QckxruozjRg-unsplash.jpg');
+        url('./../../img/dist/annie-spratt-QckxruozjRg-unsplash.png');
         background-size: cover;
     }
 }
 article#project-dev-4 {
     background-image:
     linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)70%),
-    url('./../../img/dist/campaign-creators-8F4EX4Nw1yY-unsplash.jpg');
+    url('./../../img/dist/campaign-creators-8F4EX4Nw1yY-unsplash.png');
     background-size: cover;
     &:hover {
         background-image:
         linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)0%),
-        url('./../../img/dist/campaign-creators-8F4EX4Nw1yY-unsplash.jpg');
+        url('./../../img/dist/campaign-creators-8F4EX4Nw1yY-unsplash.png');
         background-size: cover;
     }
 }
 article#project-dev-5 {
     background-image:
     linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)70%),
-    url('./../../img/dist/cowomen-7Zy2KV76Mts-unsplash.jpg');
+    url('./../../img/dist/cowomen-7Zy2KV76Mts-unsplash.png');
     background-size: cover;
     &:hover {
         background-image:
         linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)0%),
-        url('./../../img/dist/cowomen-7Zy2KV76Mts-unsplash.jpg');
+        url('./../../img/dist/cowomen-7Zy2KV76Mts-unsplash.png');
         background-size: cover;
     }
 }
 article#project-dev-6 {
     background-image:
     linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)70%),
-    url('./../../img/dist/visual-design-pl9DrjAMV6I-unsplash.jpg');
+    url('./../../img/dist/visual-design-pl9DrjAMV6I-unsplash.png');
     background-size: cover;
     &:hover {
         background-image:
         linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)0%),
-        url('./../../img/dist/visual-design-pl9DrjAMV6I-unsplash.jpg');
+        url('./../../img/dist/visual-design-pl9DrjAMV6I-unsplash.png');
         background-size: cover;
     }
 }
 article#project-dev-7 {
     background-image:
     linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)70%),
-    url('./../../img/dist/halgatewood-com-tZc3vjPCk-Q-unsplash.jpg');
+    url('./../../img/dist/halgatewood-com-tZc3vjPCk-Q-unsplash.png');
     background-size: cover;
     &:hover {
         background-image:
         linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)0%),
-        url('./../../img/dist/halgatewood-com-tZc3vjPCk-Q-unsplash.jpg');
+        url('./../../img/dist/halgatewood-com-tZc3vjPCk-Q-unsplash.png');
         background-size: cover;
     }
 }
@@ -97,12 +97,12 @@ article#project-dev-8 {
 article#project-dev-9 {
     background-image:
     linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)70%),
-    url('./../../img/dist/sigmund-HsTnjCVQ798-unsplash.jpg');
+    url('./../../img/dist/sigmund-HsTnjCVQ798-unsplash.png');
     background-size: cover;
     &:hover {
         background-image:
         linear-gradient(to bottom, rgba(255,255,255,0.6), rgba(0,0,0,0.7)0%),
-        url('./../../img/dist/sigmund-HsTnjCVQ798-unsplash.jpg');
+        url('./../../img/dist/sigmund-HsTnjCVQ798-unsplash.png');
         background-size: cover;
     }
 }
