--- a/assets/css/src/_index.scss
+++ b/assets/css/src/_index.scss
@@ -1,298 +1,298 @@
 #splide-index {
-  display: flex;
-  width: 100%;
-  padding: 0 10px;
-  img {
-    border-radius: 24px 150px 24px 150px;
-    -webkit-border-radius: 24px 150px 24px 150px;
-    -moz-border-radius: 24px 150px 24px 150px;
+    display: flex;
     width: 100%;
-    height: auto;
-    max-width: 1400px;
-    filter: sepia(50%) brightness(80%) hue-rotate(319deg) saturate(150%)
-      contrast(100%);
-    -webkit-filter: sepia(50%) brightness(80%) hue-rotate(319deg)
-      saturate(150%) contrast(100%);
-    -moz-filter: sepia(50%) brightness(80%) hue-rotate(319deg) saturate(150%)
-      contrast(100%);
+    padding: 0 10px;
+    img {
+        border-radius: 24px 150px 24px 150px;
+        -webkit-border-radius: 24px 150px 24px 150px;
+        -moz-border-radius: 24px 150px 24px 150px;
+        width: 100%;
+        height: auto;
+        max-width: 1400px;
+        filter: sepia(50%) brightness(80%) hue-rotate(319deg) saturate(150%)
+            contrast(100%);
+        -webkit-filter: sepia(50%) brightness(80%) hue-rotate(319deg)
+            saturate(150%) contrast(100%);
+        -moz-filter: sepia(50%) brightness(80%) hue-rotate(319deg)
+            saturate(150%) contrast(100%);
     }
     li.splide__slide {
-      position: relative;
-      h2 {
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        color: white;
-        font-family: $title;
-        font-size: 1em;
-        z-index: 2;
-      }
+        position: relative;
+        h2 {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            color: white;
+            font-family: $title;
+            font-size: 0.8em;
+            z-index: 2;
+        }
     }
 }
 article#last-project-1 {
-  background-image: linear-gradient(
-      to bottom,
-      rgba(255, 255, 255, 0.6),
-      rgba(0, 0, 0, 0.7) 70%
-    ),
-    url("./../../img/dist/florian-olivo-4hbJ-eymZ1o-unsplash.png");
-  background-size: cover;
-  &:hover {
     background-image: linear-gradient(
-        to bottom,
-        rgba(255, 255, 255, 0.6),
-        rgba(0, 0, 0, 0.7) 0%
-      ),
-      url("./../../img/dist/florian-olivo-4hbJ-eymZ1o-unsplash.png");
+            to bottom,
+            rgba(255, 255, 255, 0.6),
+            rgba(0, 0, 0, 0.7) 70%
+        ),
+        url("./../../img/dist/florian-olivo-4hbJ-eymZ1o-unsplash.png");
     background-size: cover;
-  }
+    &:hover {
+        background-image: linear-gradient(
+                to bottom,
+                rgba(255, 255, 255, 0.6),
+                rgba(0, 0, 0, 0.7) 0%
+            ),
+            url("./../../img/dist/florian-olivo-4hbJ-eymZ1o-unsplash.png");
+        background-size: cover;
+    }
 }
 article#last-project-2 {
-  background-image: linear-gradient(
-      to bottom,
-      rgba(255, 255, 255, 0.6),
-      rgba(0, 0, 0, 0.7) 70%
-    ),
-    url("./../../img/dist/annie-spratt-QckxruozjRg-unsplash.png");
-  background-size: cover;
-  &:hover {
     background-image: linear-gradient(
-        to bottom,
-        rgba(255, 255, 255, 0.6),
-        rgba(0, 0, 0, 0.7) 0%
-      ),
-      url("./../../img/dist/annie-spratt-QckxruozjRg-unsplash.png");
+            to bottom,
+            rgba(255, 255, 255, 0.6),
+            rgba(0, 0, 0, 0.7) 70%
+        ),
+        url("./../../img/dist/annie-spratt-QckxruozjRg-unsplash.png");
     background-size: cover;
-  }
+    &:hover {
+        background-image: linear-gradient(
+                to bottom,
+                rgba(255, 255, 255, 0.6),
+                rgba(0, 0, 0, 0.7) 0%
+            ),
+            url("./../../img/dist/annie-spratt-QckxruozjRg-unsplash.png");
+        background-size: cover;
+    }
 }
 article#last-project-3 {
-  background-image: linear-gradient(
-      to bottom,
-      rgba(255, 255, 255, 0.6),
-      rgba(0, 0, 0, 0.7) 70%
-    ),
-    url("./../../img/dist/alvaro-reyes-qWwpHwip31M-unsplash.png");
-  background-size: cover;
-  &:hover {
     background-image: linear-gradient(
-        to bottom,
-        rgba(255, 255, 255, 0.6),
-        rgba(0, 0, 0, 0.7) 0%
-      ),
-      url("./../../img/dist/alvaro-reyes-qWwpHwip31M-unsplash.png");
+            to bottom,
+            rgba(255, 255, 255, 0.6),
+            rgba(0, 0, 0, 0.7) 70%
+        ),
+        url("./../../img/dist/alvaro-reyes-qWwpHwip31M-unsplash.png");
     background-size: cover;
-  }
+    &:hover {
+        background-image: linear-gradient(
+                to bottom,
+                rgba(255, 255, 255, 0.6),
+                rgba(0, 0, 0, 0.7) 0%
+            ),
+            url("./../../img/dist/alvaro-reyes-qWwpHwip31M-unsplash.png");
+        background-size: cover;
+    }
 }
 article#last-project-4 {
-  background-image: linear-gradient(
-      to bottom,
-      rgba(255, 255, 255, 0.6),
-      rgba(0, 0, 0, 0.7) 70%
-    ),
-    url("./../../img/dist/halgatewood-com-tZc3vjPCk-Q-unsplash.png");
-  background-size: cover;
-  &:hover {
     background-image: linear-gradient(
-        to bottom,
-        rgba(255, 255, 255, 0.6),
-        rgba(0, 0, 0, 0.7) 0%
-      ),
-      url("./../../img/dist/halgatewood-com-tZc3vjPCk-Q-unsplash.png");
+            to bottom,
+            rgba(255, 255, 255, 0.6),
+            rgba(0, 0, 0, 0.7) 70%
+        ),
+        url("./../../img/dist/halgatewood-com-tZc3vjPCk-Q-unsplash.png");
     background-size: cover;
-  }
+    &:hover {
+        background-image: linear-gradient(
+                to bottom,
+                rgba(255, 255, 255, 0.6),
+                rgba(0, 0, 0, 0.7) 0%
+            ),
+            url("./../../img/dist/halgatewood-com-tZc3vjPCk-Q-unsplash.png");
+        background-size: cover;
+    }
 }
 article#last-project-5 {
-  background-image: linear-gradient(
-      to bottom,
-      rgba(255, 255, 255, 0.6),
-      rgba(0, 0, 0, 0.7) 70%
-    ),
-    url("./../../img/dist/stephen-phillips-hostreviews-co-uk-aE0iX-bLCJc-unsplash.jpg");
-  background-size: cover;
-  &:hover {
     background-image: linear-gradient(
-        to bottom,
-        rgba(255, 255, 255, 0.6),
-        rgba(0, 0, 0, 0.7) 0%
-      ),
-      url("./../../img/dist/stephen-phillips-hostreviews-co-uk-aE0iX-bLCJc-unsplash.jpg");
+            to bottom,
+            rgba(255, 255, 255, 0.6),
+            rgba(0, 0, 0, 0.7) 70%
+        ),
+        url("./../../img/dist/stephen-phillips-hostreviews-co-uk-aE0iX-bLCJc-unsplash.jpg");
     background-size: cover;
-  }
+    &:hover {
+        background-image: linear-gradient(
+                to bottom,
+                rgba(255, 255, 255, 0.6),
+                rgba(0, 0, 0, 0.7) 0%
+            ),
+            url("./../../img/dist/stephen-phillips-hostreviews-co-uk-aE0iX-bLCJc-unsplash.jpg");
+        background-size: cover;
+    }
 }
 article#last-project-6 {
-  background-image: linear-gradient(
-      to bottom,
-      rgba(255, 255, 255, 0.6),
-      rgba(0, 0, 0, 0.7) 70%
-    ),
-    url("./../../img/dist/visual-design-pl9DrjAMV6I-unsplash.png");
-  background-size: cover;
-  &:hover {
     background-image: linear-gradient(
-        to bottom,
-        rgba(255, 255, 255, 0.6),
-        rgba(0, 0, 0, 0.7) 0%
-      ),
-      url("./../../img/dist/visual-design-pl9DrjAMV6I-unsplash.png");
+            to bottom,
+            rgba(255, 255, 255, 0.6),
+            rgba(0, 0, 0, 0.7) 70%
+        ),
+        url("./../../img/dist/visual-design-pl9DrjAMV6I-unsplash.png");
     background-size: cover;
-  }
+    &:hover {
+        background-image: linear-gradient(
+                to bottom,
+                rgba(255, 255, 255, 0.6),
+                rgba(0, 0, 0, 0.7) 0%
+            ),
+            url("./../../img/dist/visual-design-pl9DrjAMV6I-unsplash.png");
+        background-size: cover;
+    }
 }
 article#design {
-  background-image: linear-gradient(
-      to bottom,
-      rgba(255, 255, 255, 0.6),
-      rgba(0, 0, 0, 0.7) 70%
-    ),
-    url("./../../img/dist/design.png");
-  background-size: cover;
-  &:hover {
     background-image: linear-gradient(
-        to bottom,
-        rgba(255, 255, 255, 0.6),
-        rgba(0, 0, 0, 0.7) 0%
-      ),
-      url("./../../img/dist/design.png");
+            to bottom,
+            rgba(255, 255, 255, 0.6),
+            rgba(0, 0, 0, 0.7) 70%
+        ),
+        url("./../../img/dist/design.png");
     background-size: cover;
-  }
+    &:hover {
+        background-image: linear-gradient(
+                to bottom,
+                rgba(255, 255, 255, 0.6),
+                rgba(0, 0, 0, 0.7) 0%
+            ),
+            url("./../../img/dist/design.png");
+        background-size: cover;
+    }
 }
 article#cpw {
-  background-image: linear-gradient(
-      to bottom,
-      rgba(255, 255, 255, 0.6),
-      rgba(0, 0, 0, 0.7) 70%
-    ),
-    url("./../../img/dist/cpw.png");
-  background-size: cover;
-  max-width: 204px;
-  &:hover {
     background-image: linear-gradient(
-        to bottom,
-        rgba(255, 255, 255, 0.6),
-        rgba(0, 0, 0, 0.7) 0%
-      ),
-      url("./../../img/dist/cpw.png");
+            to bottom,
+            rgba(255, 255, 255, 0.6),
+            rgba(0, 0, 0, 0.7) 70%
+        ),
+        url("./../../img/dist/cpw.png");
     background-size: cover;
-  }
+    max-width: 204px;
+    &:hover {
+        background-image: linear-gradient(
+                to bottom,
+                rgba(255, 255, 255, 0.6),
+                rgba(0, 0, 0, 0.7) 0%
+            ),
+            url("./../../img/dist/cpw.png");
+        background-size: cover;
+    }
 }
 article#graph {
-  background-image: linear-gradient(
-      to bottom,
-      rgba(255, 255, 255, 0.6),
-      rgba(0, 0, 0, 0.7) 70%
-    ),
-    url("./../../img/dist/graph.png");
-  background-size: cover;
-  &:hover {
     background-image: linear-gradient(
-        to bottom,
-        rgba(255, 255, 255, 0.6),
-        rgba(0, 0, 0, 0.7) 0%
-      ),
-      url("./../../img/dist/graph.png");
+            to bottom,
+            rgba(255, 255, 255, 0.6),
+            rgba(0, 0, 0, 0.7) 70%
+        ),
+        url("./../../img/dist/graph.png");
     background-size: cover;
-  }
+    &:hover {
+        background-image: linear-gradient(
+                to bottom,
+                rgba(255, 255, 255, 0.6),
+                rgba(0, 0, 0, 0.7) 0%
+            ),
+            url("./../../img/dist/graph.png");
+        background-size: cover;
+    }
 }
 
 // icones footer //////////////////////
 
 .networks-icons-mobile {
-  position: absolute;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  font-size: 3rem;
-  gap: 10px;
-  top: 20px;
-  left: 95%;
-  transform: translateX(-100%);
+    position: absolute;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    font-size: 3rem;
+    gap: 10px;
+    top: 20px;
+    left: 95%;
+    transform: translateX(-100%);
 }
 .networks-icons-large {
-  display: none;
-  margin-right: 20px;
+    display: none;
+    margin-right: 20px;
 }
 .networks-icons-large i:hover,
 .networks-icons-mobile i:hover {
-  color: white;
+    color: white;
 }
 #campus-logo-mobile {
-  width: 100%;
-  display: flex;
-  justify-content: flex-start;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
 }
 
 /*==============RESPONSIVE=============*/
 @media screen and (min-width: 576px) {
-  #splide-index {
-    margin-top: 50px;
-    padding: 0 50px;
-    img {
-      border-radius: 50px 50px 200px 200px;
-      -webkit-border-radius: 50px 50px 200px 200px;
-      -moz-border-radius: 50px 50px 200px 200px;
-      width: 100%;
-      height: auto;
-      max-height: 640px;
+    #splide-index {
+        margin-top: 50px;
+        padding: 0 50px;
+        img {
+            border-radius: 50px 50px 200px 200px;
+            -webkit-border-radius: 50px 50px 200px 200px;
+            -moz-border-radius: 50px 50px 200px 200px;
+            width: 100%;
+            height: auto;
+            max-height: 640px;
+        }
     }
-  }
 }
 @media screen and (min-width: 768px) {
-  #splide-index {
-      li.splide__slide {
-        h2 {
-          font-size: 2em;
+    #splide-index {
+        li.splide__slide {
+            h2 {
+                font-size: 1.5em;
+            }
         }
-      }
-  }
-  .portfolio article#dev {
-    grid-column: span 6;
-  }
-  .portfolio article#design {
-    grid-column: span 6;
-  }
-  .portfolio article#cpw {
-    grid-column: span 6;
-  }
-  .portfolio article#graph {
-    grid-column: span 6;
-  }
-  .networks-icons-mobile {
-    display: none;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    font-size: 2rem;
-    gap: 10px;
-  }
-  .networks-icons-large {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    font-size: 1.5rem;
-    gap: 10px;
-  }
-  .large-links {
-    display: flex;
-  }
-  #campus-logo-mobile {
-    width: 15%;
-    display: flex;
-    margin: 0;
-  }
+    }
+    .portfolio article#dev {
+        grid-column: span 6;
+    }
+    .portfolio article#design {
+        grid-column: span 6;
+    }
+    .portfolio article#cpw {
+        grid-column: span 6;
+    }
+    .portfolio article#graph {
+        grid-column: span 6;
+    }
+    .networks-icons-mobile {
+        display: none;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        font-size: 2rem;
+        gap: 10px;
+    }
+    .networks-icons-large {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        font-size: 1.5rem;
+        gap: 10px;
+    }
+    .large-links {
+        display: flex;
+    }
+    #campus-logo-mobile {
+        width: 15%;
+        display: flex;
+        margin: 0;
+    }
 }
 @media screen and (min-width: 992px) {
-  #splide-index {
-    margin-top: 50px;
-    padding: 0 50px;
-    img {
-      border-radius: 50px 50px 200px 200px;
-      -webkit-border-radius: 50px 50px 200px 200px;
-      -moz-border-radius: 50px 50px 200px 200px;
-      width: 100%;
-      height: auto;
-      max-height: 400px;
+    #splide-index {
+        margin-top: 50px;
+        padding: 0 50px;
+        img {
+            border-radius: 50px 50px 200px 200px;
+            -webkit-border-radius: 50px 50px 200px 200px;
+            -moz-border-radius: 50px 50px 200px 200px;
+            width: 100%;
+            height: auto;
+            max-height: 400px;
+        }
     }
-  }
-  article#cpw {
-    max-width: 1000px;
-  }
+    article#cpw {
+        max-width: 1000px;
+    }
 }
