fix height header img

--- a/assets/css/src/_index.scss
+++ b/assets/css/src/_index.scss
@@ -7,7 +7,7 @@
         -webkit-border-radius: 24px 150px 24px 150px;
         -moz-border-radius: 24px 150px 24px 150px;
         width: 100%;
-        height: auto;
+        height: 100%;
         max-width: 1400px;
         filter: sepia(50%) brightness(80%) hue-rotate(319deg) saturate(150%)
             contrast(100%);
